# KnowMind

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: app.py  env.py
backend/api/: router.py
backend/api/routes/: auth.py  chat.py
backend/chat/: runtime.py  storage.py
backend/db/: models.py
backend/infra/: auth.py  cache.py  database.py
backend/schemas/: __init__.py  auth.py  chat.py
frontend/: index.html  script.js  style.css
