[project]
name = "knowmind"
version = "0.1.0"
description = "KnowMind RAG 知识库问答系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0,<6.0.0",
]

[tool.uv]
package = false
